--- a/package.json
+++ b/package.json
@@ -6,9 +6,12 @@
     "@apollo/react-hooks": "^3.1.1",
     "apollo-boost": "^0.4.4",
     "graphql": "^14.5.6",
+    "jsonwebtoken": "^8.5.1",
+    "jwt-decode": "^2.2.0",
     "node-sass": "^4.12.0",
     "react": "^16.9.0",
     "react-dom": "^16.9.0",
+    "react-router-dom": "^5.0.1",
     "react-scripts": "3.1.1"
   },
   "scripts": {
